# sh1107-pico-c

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: font.h  sh1107.h  sh1107_i2c.h  sh1107_spi.h
scripts/: create_font.py
src/: font.c  sh1107.c  sh1107_i2c.c  sh1107_spi.c
test/: main.c
